# agentforge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT.md  GEMINI.md  KIRO.md  OPENCODE.md  README.md  ROADMAP.md  SECURITY.md
.agentforge/: architecture.md  charter.md  constitution.md  decisions.md  glossary.md  milestones.md  repo-map.md  roadmap.md  tech-stack.md  vision.md
.agentforge/adrs/: .gitkeep  0001-modular-monorepo.md  0002-gateway-module-placement.md  0003-cli-module-architecture.md  0004-cli-packaging-and-distribution.md  (+4 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
apps/: .gitkeep
apps/cli/: README.md  pyproject.toml
apps/cli/src/agentforge_cli/: __init__.py  cli.py  diagnostics.py  explanation.py  scaffolding.py  validation.py
apps/cli/src/agentforge_cli/templates/context-v0.1/.agentforge/: architecture.md  charter.md  constitution.md  decisions.md  repo-map.md
apps/cli/src/agentforge_cli/templates/context-v0.1/.agentforge/adrs/: ADR_TEMPLATE.md
apps/cli/src/agentforge_cli/templates/context-v0.1/.agentforge/agents/: AGENTS.md
apps/cli/src/agentforge_cli/templates/context-v0.1/.agentforge/rfcs/: RFC_TEMPLATE.md
apps/cli/tests/: test_cli.py  test_install.py
docs/: .gitkeep  aics.md  architecture.md  branching-policy.md  coding-standards.md  documentation-standards.md  gateway.md  release-policy.md  repository.md
examples/: .gitkeep
scripts/: .gitkeep  aics_validation.py  validate_aics.py  validate_bootstrap.py
tests/: .gitkeep
tools/: .gitkeep
(+51 files in other folders)
