[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge-cli"
version = "0.0.5"
description = "Canonical AgentForge command-line interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agentforge = "agentforge_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
